# UICWKgroup23

./: CMakeLists.txt  ComplianceDashboardPage.hpp  EnvironmentalLitterIndicatorsPage.cpp  POPsPage.cpp  PollutantOverviewPage.cpp  PollutantOverviewPage.hpp  README.md  dataset.cpp  dataset.hpp  model.cpp  model.hpp  stats.hpp  waterquality.hpp  window.cpp  window.hpp
Iteration 2/: ComplianceDashboardPage.cpp  ComplianceDashboardPage.hpp  DashboardPage.cpp  POPsPage.hpp  PollutantOverviewPage.cpp  window.cpp
Iteration 3 Igor/: DashboardPage.cpp  DashboardPage.hpp  FluorinatedCompoundsPage.cpp  FluorinatedCompoundsPage.hpp  POPsPage.cpp  POPsPage.hpp  PollutantOverviewPage.cpp  RawData.cpp  model.cpp  model.hpp  window.cpp  window.hpp
Iteration1/: DashboardPage.cpp~  FluorinatedCompoundsPage.cpp  FluorinatedCompoundsPage.hpp  RawData.hpp  model.hpp  waterquality.cpp  window.cpp
Iteration2/: DashboardPage.hpp  dataset.cpp  window.hpp
Iteration3/: ComplianceDashboardPage.cpp  ComplianceDashboardPage.hpp  DashboardPage.cpp  DashboardPage.hpp  FluorinatedCompoundsPage.cpp  FluorinatedCompoundsPage.hpp  POPsPage.cpp  POPsPage.hpp  PollutantOverviewPage.cpp  PollutantOverviewPage.hpp  data description.py  dataset.cpp  (+3 more)
PollutantOverviewPage_iteration_2/: CMakeLists.txt  README.md  main.cpp
iteration 3 anche/:  translations_fr.ts  CMakeLists.txt  DashboardPage.hpp  EnvironmentalLitterIndicatorsPage.cpp  EnvironmentalLitterIndicatorsPage.hpp  FluorinatedCompoundsPage.cpp  PollutantOverviewPage.cpp  main.cpp  model.hpp  stats.cpp  waterquality.hpp  window.cpp  window.hpp
(+37 files in other folders)
